remove old endpoints, update tests and swagger
